hphp/test/slow/pseudomain/pseudomain_fatal_side_effect9.php.expectf
Fatal error: Found top-level code in %s/pseudomain_fatal_side_effect9.inc in %s/pseudomain_fatal_side_effect9.php on line 14
